--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         
                         </div>  
                     </div>
-                    <p class="lead mb-5">Hello World! My name is Luigi Apicella. I was born in Salerno (SA), Italy. I define myself proactive and always eager to find new stimuli and exploit them. I am currently attending a Master's Degree Course in Computer Engineering with specialization in AI and data analysis. Is AI the future? Why not, in the meantime I am preparing to face this rapid revolution and to face its consequences!</p>
+                    <p class="lead mb-5">Hello World! My name is Luigi Apicella. I was born in Salerno (SA), Italy. I define myself proactive and always eager to find new stimuli and exploit them. I am currently attending a Master's Degree Course in Computer Engineering with specialization in AI and data analysis. Is AI the future? Why not, in the meantime I am preparing to face this rapid revolution and its consequences!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/luigi-apicella-8513271ab/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/luapicella"><i class="fab fa-github"></i></a>
